--- a/style.css
+++ b/style.css
@@ -68,3 +68,11 @@
 
 }
 
+#completed-tasks{
+    margin-top: 35px;
+    border:2px solid rgba(0, 0, 0, 0.23);
+    border-radius: 15px;
+    background-color: white;
+    width: 600px;
+    max-height: max-content; 
+}
