--- a/style.css
+++ b/style.css
@@ -21,8 +21,6 @@
 .ul-items{
     background-color: rgba(103, 223, 223, 0.256);
     list-style: none;
-
-
 }
 
 .ul-items input[type="text"] {
@@ -39,6 +37,9 @@
     border: none;
     cursor: pointer;
     outline: none;
+    margin-right:4px;
+   
+    
 }
 
 .tasks{
@@ -48,11 +49,14 @@
     padding: 5px 10px;
 	margin-bottom: 9px;
 	border-radius: 17px;
-    align-items:center ;  /*y*/
-    justify-content: space-between; /*x*/
     cursor: pointer;
     border: 1px solid #939697;
    
+}
+
+#taskname{
+ display: flex;
+ margin-right:auto;
 }
 
 
@@ -68,11 +72,3 @@
 
 }
 
-#completed-tasks{
-    margin-top: 35px;
-    border:2px solid rgba(0, 0, 0, 0.23);
-    border-radius: 15px;
-    background-color: white;
-    width: 600px;
-    max-height: max-content; 
-}
